--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,8 @@
                 android:text="xx/xx/xxxx"
                 android:textColor="@color/dark"
                 android:textSize="70px"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/ajouter_bouton"
@@ -85,6 +86,26 @@
                 android:layout_height="97px"
                 android:background="@drawable/calendrier_en_tete"/>
 
+            <LinearLayout
+                android:id="@+id/calendrier_choixCG"
+                android:layout_width="720px"
+                android:layout_height="70px"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <ImageView
+                    android:id="@+id/calendrier_chaleur"
+                    android:layout_width="300px"
+                    android:layout_height="70px"
+                    android:background="@drawable/calendrier_bouton_chaleur" />
+
+                <ImageView
+                    android:id="@+id/calendrier_gestation"
+                    android:layout_width="300px"
+                    android:layout_height="70px"
+                    android:background="@drawable/calendrier_bouton_gestation" />
+
+            </LinearLayout>
 
             <!--Calendrier à proprement parler-->
             <LinearLayout
@@ -502,6 +523,18 @@
                     android:background="@drawable/calendrier_page_droite" />
 
             </LinearLayout>
+        </LinearLayout>
+
+
+        <!--Layout du menu Conflit-->
+        <LinearLayout
+            android:id="@+id/layoutConflit"
+            android:layout_width="wrap_content"
+            android:layout_height="1100px"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:background="@drawable/fond">
+
         </LinearLayout>
 
 
